<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back" />

        <LinearLayout
            android:id="@+id/formNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/backButton">

            <TextView
                android:id="@+id/textViewNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_hint"
                android:minHeight="48dp"
                android:padding="5dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/lightblue"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/formNIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/formNama">

            <TextView
                android:id="@+id/textViewNIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nim_hint"
                android:minHeight="48dp"
                android:padding="5dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/lightblue"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/formPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/formNIM">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_hint"
                android:minHeight="48dp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/lightblue"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/formPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_bg"
            android:text="@string/regist"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_marginVertical="25dp"
            android:paddingHorizontal="60dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>