<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/profilePict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/profilepict"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/cdImageView"/>

            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@id/profilePict"
                app:layout_constraintBottom_toBottomOf="@id/profilePict"
                app:layout_constraintStart_toEndOf="@id/profilePict">

                <TextView
                    android:id="@+id/namaLengkap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_nama"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_regular"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_status"
                    android:background="@drawable/statusbg"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:paddingHorizontal="10dp"
                    android:fontFamily="@font/poppins_regular"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/profile"
                app:layout_constraintStart_toEndOf="@id/profile"
                android:src="@drawable/baseline_notifications_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/cdImageView"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_bottom_corners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile"
                >

                <TextView
                    android:id="@+id/rectangle_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nomor_ruangan"
                    android:text="@string/ruang_102"
                    android:textSize="20sp"
                    android:paddingVertical="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_jumlah_sks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/besaran_sks"
                    android:layout_below="@id/rectangle_3"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/jumlah_sks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sks_3"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:layout_below="@id/rectangle_3"
                    android:layout_toEndOf="@id/tv_jumlah_sks"
                    android:layout_alignTop="@id/tv_jumlah_sks"
                    android:layout_marginStart="5dp"
                    />

                <TextView
                    android:id="@+id/jadwal_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selasa"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_below="@id/tv_jumlah_sks"
                    android:layout_alignStart="@id/tv_jumlah_sks"
                    />

                <TextView
                    android:id="@+id/jadwal_pukul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jadwal"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_alignStart="@id/tv_jumlah_sks"
                    android:layout_below="@id/jadwal_hari"

                    />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="38dp"
                    android:layout_below="@id/jadwal_pukul"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"
                    android:background="@drawable/bookingbg"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:paddingVertical="10dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/menubar"
        android:baselineAligned="false"> <!-- Set the background color or drawable for the menu bar -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_disabled"
                android:contentDescription="@string/cdImageView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu1"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/lightblue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_library_books_24_active"
                android:contentDescription="@string/cdImageView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu2"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/midblue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_24blue"
                android:contentDescription="@string/cdImageView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu3"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/lightblue"/>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>